--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "acorn": "^8.7.0",
+    "escodegen": "^2.0.0",
     "lodash": "^4.17.21",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -20,9 +23,9 @@
     ]
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-sapp-rewired test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
@@ -51,9 +54,12 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.1.0",
+    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "react-app-rewired": "^2.1.11"
   }
 }
