--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "acorn": "^8.7.0",
-    "escodegen": "^2.0.0",
     "lodash": "^4.17.21",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
@@ -23,9 +21,9 @@
     ]
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-sapp-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
@@ -54,12 +52,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-prismjs": "^2.1.0",
-    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
-    "prettier": "2.5.1",
-    "react-app-rewired": "^2.1.11"
+    "prettier": "2.5.1"
   }
 }
